[package]
name = "subscriber"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
paho-mqtt = "0.11"
libc = "0.2"
futures = "0.3"
futures-timer = "3.0"
async-channel = "1.6"
crossbeam-channel = "0.5"
log = "0.4"
thiserror = "1.0"
